Update Codemagic to trigger on production branch

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -18,7 +18,7 @@ workflows:
       events:
         - push
       branch_patterns:
-        - pattern: main
+        - pattern: production
           include: true
 
     scripts:
