Fix: Move CocoaPods before signing, add project path to use-profiles

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -45,16 +45,17 @@ workflows:
         script: |
           npx expo prebuild --platform ios --clean
 
+      - name: Install CocoaPods dependencies
+        script: |
+          cd ios && pod install
+
       - name: Set up code signing
         script: |
           keychain initialize
           app-store-connect fetch-signing-files "$BUNDLE_ID" --type IOS_APP_STORE --create
           keychain add-certificates
-          xcode-project use-profiles
-
-      - name: Install CocoaPods dependencies
-        script: |
-          cd ios && pod install
+          cd ios
+          xcode-project use-profiles --project "ImposterGame.xcodeproj"
 
       - name: Increment build number
         script: |
