--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -72,10 +72,50 @@ workflows:
       - name: Build iOS app
         script: |
           cd ios
-          xcode-project build-ipa \
-            --workspace "ImposterGame.xcworkspace" \
-            --scheme "ImposterGame" \
-            --config Release
+          # Defines the path to the xcarchive
+          ARCHIVE_PATH="$PWD/build/ios/xcarchive/ImposterGame.xcarchive"
+          EXPORT_OPTIONS_PLIST="$PWD/ExportOptions.plist"
+
+          # 1. Archive the app
+          xcodebuild archive \
+            -workspace "ImposterGame.xcworkspace" \
+            -scheme "ImposterGame" \
+            -config Release \
+            -archivePath "$ARCHIVE_PATH" \
+            -allowProvisioningUpdates \
+            CODE_SIGN_STYLE="Manual" \
+            CODE_SIGN_IDENTITY="Apple Distribution"
+
+          # 2. Create ExportOptions.plist
+          cat > "$EXPORT_OPTIONS_PLIST" <<EOF
+          <?xml version="1.0" encoding="UTF-8"?>
+          <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+          <plist version="1.0">
+          <dict>
+            <key>method</key>
+            <string>app-store</string>
+            <key>uploadBitcode</key>
+            <false/>
+            <key>compileBitcode</key>
+            <false/>
+            <key>signingStyle</key>
+            <string>manual</string>
+            <key>stripSwiftSymbols</key>
+            <true/>
+            <key>teamID</key>
+            <string>Z83Y9VJTKH</string> 
+          </dict>
+          </plist>
+          EOF
+
+          # Note: We need to dynamically insert Team ID or let it fail? 
+          # Better: Let xcodebuild detect or we need to add TEAM_ID var.
+
+          # 3. Export IPA
+          xcodebuild -exportArchive \
+            -archivePath "$ARCHIVE_PATH" \
+            -exportPath "$PWD/build/ios/ipa" \
+            -exportOptionsPlist "$EXPORT_OPTIONS_PLIST"
 
     artifacts:
       - ios/build/ios/ipa/*.ipa
