Fix: Dynamically find Provisioning Profile UUID and pass to xcodebuild

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -76,6 +76,15 @@ workflows:
           ARCHIVE_PATH="$PWD/build/ios/xcarchive/ImposterGame.xcarchive"
           EXPORT_OPTIONS_PLIST="$PWD/ExportOptions.plist"
 
+          # Find the provisioning profile UUID
+          PROFILE_PATH=$(find ~/Library/MobileDevice/Provisioning\ Profiles -name "*.mobileprovision" | head -n 1)
+          if [ -z "$PROFILE_PATH" ]; then
+            echo "Error: No provisioning profile found!"
+            exit 1
+          fi
+          PROFILE_UUID=$(/usr/libexec/PlistBuddy -c 'Print :UUID' /dev/stdin <<< $(security cms -D -i "$PROFILE_PATH"))
+          echo "Found Profile UUID: $PROFILE_UUID"
+
           # 1. Archive the app
           xcodebuild archive \
             -workspace "ImposterGame.xcworkspace" \
@@ -84,7 +93,9 @@ workflows:
             -archivePath "$ARCHIVE_PATH" \
             -allowProvisioningUpdates \
             CODE_SIGN_STYLE="Manual" \
-            CODE_SIGN_IDENTITY="Apple Distribution"
+            CODE_SIGN_IDENTITY="Apple Distribution" \
+            PROVISIONING_PROFILE_SPECIFIER="$PROFILE_UUID" \
+            DEVELOPMENT_TEAM="Z83Y9VJTKH"
 
           # 2. Create ExportOptions.plist
           cat > "$EXPORT_OPTIONS_PLIST" <<EOF
@@ -104,6 +115,11 @@ workflows:
             <true/>
             <key>teamID</key>
             <string>Z83Y9VJTKH</string> 
+            <key>provisioningProfiles</key>
+            <dict>
+               <key>$BUNDLE_ID</key>
+               <string>$PROFILE_UUID</string>
+            </dict>
           </dict>
           </plist>
           EOF
