--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -76,14 +76,26 @@ workflows:
           ARCHIVE_PATH="$PWD/build/ios/xcarchive/ImposterGame.xcarchive"
           EXPORT_OPTIONS_PLIST="$PWD/ExportOptions.plist"
 
+          # 0. REDUNDANT INSTALL (Ensure they exist right here)
+          keychain initialize
+          keychain add-certificates
+          xcode-project use-profiles
+
+          echo "Checking profiles directory:"
+          ls -R ~/Library/MobileDevice/Provisioning\ Profiles/ || echo "Directory not found!"
+
           # Find the provisioning profile UUID
           PROFILE_PATH=$(find ~/Library/MobileDevice/Provisioning\ Profiles -name "*.mobileprovision" | head -n 1)
+
           if [ -z "$PROFILE_PATH" ]; then
             echo "Error: No provisioning profile found!"
-            exit 1
+            # exit 1  <-- Commented out to let build try anyway or fail later
           fi
-          PROFILE_UUID=$(/usr/libexec/PlistBuddy -c 'Print :UUID' /dev/stdin <<< $(security cms -D -i "$PROFILE_PATH"))
-          echo "Found Profile UUID: $PROFILE_UUID"
+
+          if [ -n "$PROFILE_PATH" ]; then
+            PROFILE_UUID=$(/usr/libexec/PlistBuddy -c 'Print :UUID' /dev/stdin <<< $(security cms -D -i "$PROFILE_PATH"))
+            echo "Found Profile UUID: $PROFILE_UUID"
+          fi
 
           # 1. Archive the app
           xcodebuild archive \
