--- a/app.json
+++ b/app.json
@@ -7,30 +7,55 @@
     "scheme": "imposter-game",
     "orientation": "portrait",
     "icon": "./assets/the imposter logo 3.png",
-    "userInterfaceStyle": "light",
+    "userInterfaceStyle": "dark",
+    "backgroundColor": "#0a0a0a",
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#0a0a0a"
     },
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.rayn100.impostergame",
-      "buildNumber": "1"
+      "buildNumber": "1",
+      "backgroundColor": "#0a0a0a",
+      "infoPlist": {
+        "NSCameraUsageDescription": "Imposter Game uses your camera to scan QR codes for quickly joining multiplayer game rooms.",
+        "NSMicrophoneUsageDescription": "Imposter Game uses your microphone to record voice messages during multiplayer game chat.",
+        "ITSAppUsesNonExemptEncryption": false
+      }
     },
     "android": {
+      "package": "com.rayn100.impostergame",
+      "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/the imposter logo 3.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#0a0a0a"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "backgroundColor": "#0a0a0a",
+      "permissions": [
+        "android.permission.INTERNET",
+        "android.permission.ACCESS_NETWORK_STATE",
+        "android.permission.RECORD_AUDIO",
+        "android.permission.CAMERA"
+      ],
+      "config": {
+        "googleServicesFile": "./google-services.json"
+      }
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
       "expo-font",
-      "expo-web-browser"
-    ]
+      "expo-web-browser",
+      "expo-splash-screen"
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "c49fcb0a-1434-4154-b66e-469b1050a674"
+      }
+    }
   }
 }
