Add settings screen with gear icon, improve avatar builder layout, update splash screen to use game logo

--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
     "userInterfaceStyle": "dark",
     "backgroundColor": "#0a0a0a",
     "splash": {
-      "image": "./assets/splash-icon.png",
+      "image": "./assets/the imposter logo 3.png",
       "resizeMode": "contain",
       "backgroundColor": "#0a0a0a"
     },
