--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/netinfo": "11.4.1",
+    "@react-native-google-signin/google-signin": "^16.1.1",
     "@react-navigation/native": "^7.1.26",
     "@react-navigation/stack": "^7.6.13",
     "babel-preset-expo": "~54.0.9",
     "expo": "~54.0.30",
-    "expo-auth-session": "~7.0.10",
     "expo-av": "~16.0.8",
     "expo-camera": "~17.0.10",
     "expo-file-system": "~19.0.21",
@@ -27,7 +27,6 @@
     "expo-random": "^14.0.1",
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
-    "expo-web-browser": "~15.0.10",
     "firebase": "^12.7.0",
     "lottie-react-native": "~7.3.1",
     "react": "19.1.0",
