--- a/codemagic_build.yaml
+++ b/codemagic_build.yaml
@@ -9,7 +9,7 @@ workflows:
       - name: Install dependencies
         script: npm install
       - name: Expo Prebuild
-        script: npx expo prebuild --platform android --no-interactive
+        script: npx expo prebuild --platform android
       - name: Build Android APK
         script: |
           cd android
