feat: complete native voice chat implementation

--- a/app.json
+++ b/app.json
@@ -49,7 +49,18 @@
     "plugins": [
       "expo-font",
       "expo-web-browser",
-      "expo-splash-screen"
+      "expo-splash-screen",
+      [
+        "expo-build-properties",
+        {
+          "android": {
+            "minSdkVersion": 24
+          },
+          "ios": {
+            "deploymentTarget": "13.0"
+          }
+        }
+      ]
     ],
     "extra": {
       "eas": {
