--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-preset-expo": "~54.0.9",
     "expo": "~54.0.31",
     "expo-av": "~16.0.8",
+    "expo-build-properties": "^1.0.10",
     "expo-camera": "~17.0.10",
     "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.10",
@@ -31,6 +32,7 @@
     "lottie-react-native": "~7.3.1",
     "react": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-agora": "^4.5.3",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-qrcode-svg": "^6.3.21",
     "react-native-reanimated": "~4.1.1",
