--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-random": "^14.0.1",
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
+    "expo-web-browser": "^15.0.10",
     "firebase": "^12.7.0",
     "lottie-react-native": "~7.3.1",
     "react": "19.1.0",
