--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -13,6 +13,6 @@ workflows:
       - name: Build Android APK
         script: |
           cd android
-          ./gradlew assembleDebug
+          ./gradlew assembleRelease
     artifacts:
-      - android/app/build/outputs/apk/debug/**/*.apk
+      - android/app/build/outputs/apk/release/**/*.apk
