--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "react-native": "0.81.5",
     "react-native-agora": "^4.5.3",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-google-mobile-ads": "^16.0.1",
+    "react-native-purchases": "^9.6.14",
     "react-native-qrcode-svg": "^6.3.21",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
