--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-config": "~54.0.12",
+    "@lottiefiles/dotlottie-react": "^0.13.5",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/netinfo": "11.4.1",
@@ -18,9 +19,12 @@
     "@react-navigation/stack": "^7.6.13",
     "babel-preset-expo": "~54.0.9",
     "expo": "~54.0.31",
+    "expo-auth-session": "~7.0.10",
     "expo-av": "~16.0.8",
     "expo-build-properties": "^1.0.10",
     "expo-camera": "~17.0.10",
+    "expo-crypto": "~15.0.8",
+    "expo-dev-client": "~6.0.20",
     "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
@@ -32,6 +36,7 @@
     "firebase": "^12.7.0",
     "lottie-react-native": "~7.3.1",
     "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-agora": "^4.5.3",
     "react-native-gesture-handler": "~2.28.0",
@@ -41,7 +46,8 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "15.12.1"
+    "react-native-svg": "15.12.1",
+    "react-native-web": "^0.21.0"
   },
   "private": true
 }
