--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,4 +1,37 @@
 workflows:
+  android-apk:
+    name: Android APK Build
+    max_build_duration: 60
+    instance_type: mac_mini_m2
+
+    environment:
+      node: 20
+      java: 17
+
+    triggering:
+      events:
+        - push
+      branch_patterns:
+        - pattern: production
+          include: true
+
+    scripts:
+      - name: Install dependencies
+        script: |
+          npm install
+
+      - name: Prebuild Android native project
+        script: |
+          npx expo prebuild --platform android --clean
+
+      - name: Build Android APK
+        script: |
+          cd android
+          ./gradlew assembleRelease
+
+    artifacts:
+      - android/app/build/outputs/apk/**/*.apk
+
   ios-testflight:
     name: iOS TestFlight Build
     max_build_duration: 120
