Add step to print SHA-1 fingerprint in Android build

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -24,6 +24,12 @@ workflows:
         script: |
           npx expo prebuild --platform android --clean
 
+      - name: Print Debug Keystore SHA-1
+        script: |
+          echo "=== DEBUG KEYSTORE SHA-1 FINGERPRINT ==="
+          keytool -list -v -keystore ~/.android/debug.keystore -alias androiddebugkey -storepass android -keypass android 2>/dev/null | grep SHA1
+          echo "========================================="
+
       - name: Build Android APK
         script: |
           cd android
