chore: configure release signing in codemagic

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -30,10 +30,18 @@ workflows:
           keytool -list -v -keystore ~/.android/debug.keystore -alias androiddebugkey -storepass android -keypass android 2>/dev/null | grep SHA1
           echo "========================================="
 
-      - name: Build Android AAB (App Bundle)
+      - name: Setup Signing Keystore
+        script: |
+          echo $CM_KEYSTORE | base64 --decode > /tmp/keystore.keystore
+
+      - name: Build Android AAB (App Bundle) with Signing
         script: |
           cd android
-          ./gradlew bundleRelease
+          ./gradlew bundleRelease \
+            -Pandroid.injected.signing.store.file=/tmp/keystore.keystore \
+            -Pandroid.injected.signing.store.password=$CM_KEYSTORE_PASSWORD \
+            -Pandroid.injected.signing.key.alias=$CM_KEY_ALIAS \
+            -Pandroid.injected.signing.key.password=$CM_KEY_PASSWORD
 
       - name: Print APK SHA-1 (for Firebase)
         script: |
