--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -32,8 +32,8 @@ workflows:
 
       - name: Setup Signing Keystore
         script: |
-          # Use base64 -D for macOS (BSD base64)
-          echo "$CM_KEYSTORE" | base64 -D -o /tmp/keystore.keystore
+          # Use Node.js for robust, cross-platform base64 decoding
+          node -e "require('fs').writeFileSync('/tmp/keystore.keystore', Buffer.from(process.env.CM_KEYSTORE, 'base64'))"
 
       - name: Build Android AAB (App Bundle) with Signing
         script: |
