--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -48,11 +48,17 @@ workflows:
       - name: Build Android AAB (App Bundle) with Signing
         script: |
           cd android
-          ./gradlew bundleRelease \
-            -Pandroid.injected.signing.store.file=/tmp/keystore.keystore \
-            -Pandroid.injected.signing.store.password=$CM_KEYSTORE_PASSWORD \
-            -Pandroid.injected.signing.key.alias=$CM_KEY_ALIAS \
-            -Pandroid.injected.signing.key.password=$CM_KEY_PASSWORD
+          ./gradlew bundleRelease || ./gradlew bundleRelease
+
+      - name: Sign Android Release Bundle
+        script: |
+          echo "Signing bundle manually..."
+          jarsigner -verbose -sigalg SHA256withRSA -digestalg SHA-256 \
+            -keystore /tmp/keystore.keystore \
+            -storepass $CM_KEYSTORE_PASSWORD \
+            -keypass $CM_KEY_PASSWORD \
+            android/app/build/outputs/bundle/release/app-release.aab \
+            $CM_KEY_ALIAS
 
       - name: Print APK SHA-1 (for Firebase)
         script: |
