--- a/app.json
+++ b/app.json
@@ -1,15 +1,15 @@
 {
   "expo": {
-    "name": "Imposter Game",
+    "name": "The Imposter",
     "slug": "imposter-game",
     "version": "1.0.0",
     "scheme": "imposter-game",
     "orientation": "portrait",
-    "icon": "./assets/the imposter logo 3.png",
+    "icon": "./assets/icon.png",
     "userInterfaceStyle": "dark",
     "backgroundColor": "#0a0a0a",
     "splash": {
-      "image": "./assets/the imposter logo 3.png",
+      "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#0a0a0a"
     },
@@ -28,7 +28,7 @@
       "package": "com.usman.impostergame",
       "versionCode": 1,
       "adaptiveIcon": {
-        "foregroundImage": "./assets/the imposter logo 3.png",
+        "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#0a0a0a"
       },
       "edgeToEdgeEnabled": true,
