Update app name to Impostor Game: Film Edition

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "The Imposter",
+    "name": "Impostor Game: Film Edition",
     "slug": "imposter-game",
     "version": "1.0.0",
     "scheme": "imposter-game",
