--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,4 +1,48 @@
 workflows:
+  android-apk-test:
+    name: Android APK Test Build
+    max_build_duration: 60
+    instance_type: mac_mini_m2
+
+    environment:
+      groups:
+        - imposter
+      node: 20
+      java: 17
+
+    triggering:
+      events:
+        - push
+      branch_patterns:
+        - pattern: apk
+          include: true
+
+    scripts:
+      - name: Install dependencies
+        script: |
+          npm install
+
+      - name: Prebuild Android native project
+        script: |
+          npx expo prebuild --platform android --clean
+
+      - name: Build Debug APK for Testing
+        script: |
+          cd android
+          ./gradlew assembleDebug
+
+      - name: Print APK Info
+        script: |
+          echo "=== APK BUILD COMPLETE ==="
+          echo "APK location: android/app/build/outputs/apk/debug/"
+          ls -la android/app/build/outputs/apk/debug/
+          echo ""
+          echo "This is a DEBUG APK for testing voice chat and Google Sign-In"
+          echo "========================================"
+
+    artifacts:
+      - android/app/build/outputs/apk/**/*.apk
+
   android-release:
     name: Android Play Store Build (AAB)
     max_build_duration: 60
