Fix ProfileScreen avatar persistence and update Login UI with custom Google logo

--- a/app.json
+++ b/app.json
@@ -87,5 +87,9 @@
         "projectId": "c49fcb0a-1434-4154-b66e-469b1050a674"
       }
     }
+  },
+  "react-native-google-mobile-ads": {
+    "android_app_id": "ca-app-pub-3940256099942544~3347511713",
+    "ios_app_id": "ca-app-pub-3940256099942544~1458002511"
   }
 }
