--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -294,3 +294,62 @@ workflows:
         submit_to_testflight: true
         beta_groups:
           - "Internal Testers"
+
+  ios-unsigned-dev:
+    name: iOS Unsigned Dev Build (for Sideloadly)
+    max_build_duration: 120
+    instance_type: mac_mini_m2
+
+    environment:
+      node: 20
+      xcode: latest
+      cocoapods: default
+
+    triggering:
+      events:
+        - push
+      branch_patterns:
+        - pattern: ios-dev
+          include: true
+
+    scripts:
+      - name: Install dependencies
+        script: |
+          npm install
+
+      - name: Prebuild iOS native project
+        script: |
+          # Uses default EAS/Expo settings which creates Development Build compatible code by default in Debug mode usually
+          npx expo prebuild --platform ios --clean
+
+      - name: Install CocoaPods
+        script: |
+          cd ios && pod install
+
+      - name: Build Unsigned .app
+        script: |
+          cd ios
+          # Build a Debug version (Supports instant reload/Metro)
+          # CODE_SIGNING_ALLOWED=NO tells Xcode not to sign
+          xcodebuild build \
+            -workspace ImposterGame.xcworkspace \
+            -scheme ImposterGame \
+            -configuration Debug \
+            -sdk iphoneos \
+            -derivedDataPath ./build \
+            CODE_SIGNING_ALLOWED=NO \
+            CODE_SIGNING_REQUIRED=NO \
+            CODE_SIGN_IDENTITY=""
+
+      - name: Package as IPA
+        script: |
+          cd ios
+          mkdir -p Payload
+          # The .app usually lives in build/Build/Products/Debug-iphoneos/
+          cp -r build/Build/Products/Debug-iphoneos/ImposterGame.app Payload/
+          
+          # Create IPA
+          zip -r imposter-dev-unsigned.ipa Payload
+          
+    artifacts:
+      - ios/imposter-dev-unsigned.ipa
