--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "expo-status-bar": "~3.0.9",
     "expo-web-browser": "^15.0.10",
     "firebase": "^12.7.0",
+    "firebase-admin": "^13.6.0",
     "lottie-react-native": "~7.3.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
