Fix package name to match iOS (remove hue from Android)
- Changed Android package from com.raynusman100hue.impostorgame to com.rayn100.impostergame
- Now matches iOS bundle ID: com.rayn100.impostergame
- Updated all guides with correct package name
- Created PACKAGE_NAME_FINAL.md for reference

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -9,7 +9,7 @@ workflows:
       groups:
         - google_play
       vars:
-        PACKAGE_NAME: "com.raynusman100hue.impostorgame"
+        PACKAGE_NAME: "com.rayn100.impostergame"
       node: 18
     triggering:
       events:
@@ -54,7 +54,7 @@ workflows:
       groups:
         - google_play
       vars:
-        PACKAGE_NAME: "com.raynusman100hue.impostorgame"
+        PACKAGE_NAME: "com.rayn100.impostergame"
       node: 18
     triggering:
       events:
