--- a/app.json
+++ b/app.json
@@ -25,7 +25,7 @@
       }
     },
     "android": {
-      "package": "com.raynusman100hue.impostorgame",
+      "package": "com.rayn100.impostergame",
       "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/the imposter logo 3.png",
