--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -23,9 +23,9 @@ workflows:
       - name: Install dependencies
         script: |
           npm install
-      - name: Set up local.properties
+      - name: Prebuild Android project
         script: |
-          echo "sdk.dir=$ANDROID_SDK_ROOT" > "$CM_BUILD_DIR/android/local.properties"
+          npx expo prebuild --platform android --clean
       - name: Build Android AAB
         script: |
           cd android
@@ -52,6 +52,9 @@ workflows:
       events:
         - push
       branch_patterns:
+        - pattern: 'apk-build'
+          include: true
+          source: true
         - pattern: 'codemagic'
           include: true
           source: true
@@ -62,9 +65,9 @@ workflows:
       - name: Install dependencies
         script: |
           npm install
-      - name: Set up local.properties
+      - name: Prebuild Android project
         script: |
-          echo "sdk.dir=$ANDROID_SDK_ROOT" > "$CM_BUILD_DIR/android/local.properties"
+          npx expo prebuild --platform android --clean
       - name: Build Android APK
         script: |
           cd android
