--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -8,7 +8,7 @@ workflows:
         - keystore_reference
       vars:
         PACKAGE_NAME: "com.rayn100.impostergame"
-      node: 18
+      node: 20
     triggering:
       events:
         - push
@@ -41,13 +41,13 @@ workflows:
           failure: true
 
   android-preview-apk:
-    name: Android Preview APK
+    name: Android Release APK (Unsigned)
     max_build_duration: 60
     instance_type: mac_mini_m1
     environment:
       vars:
         PACKAGE_NAME: "com.rayn100.impostergame"
-      node: 18
+      node: 20
     triggering:
       events:
         - push
@@ -68,10 +68,10 @@ workflows:
       - name: Prebuild Android project
         script: |
           npx expo prebuild --platform android --clean
-      - name: Build Android APK
+      - name: Build Android Release APK
         script: |
           cd android
-          ./gradlew assembleDebug
+          ./gradlew assembleRelease
     artifacts:
       - android/app/build/outputs/**/*.apk
     publishing:
